selfhost/test/typechecker/enumdecl/error_duplicate_variant.out
Error at %FILE_NAME%:4:3
Duplicate name 'Bar'
  |    Bar
       ^
This name is also declared at (2:3)
  |    Bar
       ^
